--- a/style.css
+++ b/style.css
@@ -9,17 +9,11 @@
 body{
     margin: 0px;
     padding: 0px;
+    background-color: black;
     background-image: url('img/one.jpg');
-    /* background-color: rgb(42, 84, 62); */
-    background-repeat: no-repeat;
+    background-repeat: repeat;
+    background-size: 100%;
     z-index: -1;
-    /* background-attachment: fixed; */
-    /* background-position: center; */
-    /* height: 711px; */
-}
-.bg{
-    height: 100vh;
-    width: 100vw;
 }
 header{
     margin: 3% 4%;
@@ -42,25 +36,28 @@ nav .navbar li{
     padding: 0px 12px;
     /* justify-content: space-between; */
 }
-nav .navbar li a, div .btn .navbar a{
+nav .navbar li a, div .navbar a{
     padding: 4px;
     text-decoration: none;
     color: white;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
-nav .navbar li a, div .btn .navbar a{
+nav .navbar li a, div .navbar a{
     transition: all 0.3s ease 0s;
 }
-nav .navbar li a:hover, div .btn .navbar a:hover{
+nav .navbar li a:hover, div .navbar a:hover, .navbar a.active{
+    color: black;
     background-color: white;
     opacity: 0.5;
-    color: black;
     transition: all 0.3s ease 0s;
     font-size: 20px;
     border-radius: 4px;
 }
 
+div .navbar a .active{
+    color: black;
+}
 div > p{
     font-size: 78px;
     margin-top: 10%;
@@ -69,20 +66,19 @@ div > p{
     font-weight: 600;
     text-align: center;
 }
-.buttons{
-    display: inline-block;
-    width: auto;
-}
-div .btn .navbar li{
-    box-sizing: border-box;
-    display: inline-block;
-    /* width: 100px auto; */
-    /* justify-content: center; */
-}
-div .btn .navbar a{
+
+div .navbar a{
     border: 2px solid white;
     border-radius: 4px;
     padding: 10px;
+    margin: 5px;
 }
+.btn{
+    display: flex;
+    /* width: 500px; */
+    justify-content: center;
+    margin: 10px;
+}
+
 
 
